--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Aura</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Aura</title>
+    <link rel="shortcut icon" type="image/png" href="./images/auracircle.png" />
     <script defer type="module" src="main.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link
+    href="https://fonts.googleapis.com/css?family=Comfortaa"
+    rel="stylesheet"
+  />
   </head>
 
   <body>
@@ -17,17 +22,56 @@
         /></a>
         <ul>
           <li>
-            <a class="btn" href="#whatareauras">What are Auras</a>
+            <a class="btn" href="./index.html">What are Auras</a>
           </li>
           <li>
-            <a class="btn" href="#whatisaura">What is Aura</a>
+            <a class="btn" href="./about.html">What is Aura</a>
           </li>
           <li>
-            <a class="btn" href="#Contact">Contact</a>
+            <a class="btn" href="./meetTheTeam.html">Contact</a>
           </li>
         </ul>
       </nav>
     </header>
+
+    <div class="slideshow">
+      <div class="slides">
+        <img src="./images/place1.jpg" alt="slide1" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place2.jpg" alt="slide2" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place3.jpg" alt="slide3" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place4.jpg" alt="slide4" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place5.jpeg" alt="slide5" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place6.jpeg" alt="slide6" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place7.jpeg" alt="slide7" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place8.jpeg" alt="slide8" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place9.jpg" alt="slide9" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place10.jpeg" alt="slide10" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place11.jpeg" alt="slide11" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./images/place12.jpeg" alt="slide12" class="centerSplash" />
+      </div>
+    </div>
 
     <article>
       <form id="auraForm" class="forms">
@@ -59,5 +103,10 @@
       </form>
       <input type="submit" id="submitButton" />
     </article>
-  </body>
+
+    
+  <footer>
+    <img src="./images/auranobackwhite.png" alt="auraLogo" />
+    <p>© 2019 Aura, Inc.</p>
+  </footer>
 </html>
