--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         /></a>
         <ul>
           <li>
-            <a class="btn" href="./index.html">What are Auras</a>
+            <a class="btn" href="./index.html">Home</a>
           </li>
           <li>
             <a class="btn" href="./about.html">What is Aura</a>
@@ -36,40 +36,40 @@
 
     <div class="slideshow">
       <div class="slides">
-        <img src="./images/place1.jpg" alt="slide1" class="centerSplash" />
+        <img src="./assets/img/place1.jpg" alt="slide1" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place2.jpg" alt="slide2" class="centerSplash" />
+        <img src="./assets/img/place2.jpg" alt="slide2" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place3.jpg" alt="slide3" class="centerSplash" />
+        <img src="./assets/img/place3.jpg" alt="slide3" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place4.jpg" alt="slide4" class="centerSplash" />
+        <img src="./assets/img/place4.jpg" alt="slide4" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place5.jpeg" alt="slide5" class="centerSplash" />
+        <img src="./assets/img/place5.jpeg" alt="slide5" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place6.jpeg" alt="slide6" class="centerSplash" />
+        <img src="./assets/img/place6.jpeg" alt="slide6" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place7.jpeg" alt="slide7" class="centerSplash" />
+        <img src="./assets/img/place7.jpeg" alt="slide7" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place8.jpeg" alt="slide8" class="centerSplash" />
+        <img src="./assets/img/place8.jpeg" alt="slide8" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place9.jpg" alt="slide9" class="centerSplash" />
+        <img src="./assets/img/place9.jpg" alt="slide9" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place10.jpeg" alt="slide10" class="centerSplash" />
+        <img src="./assets/img/place10.jpeg" alt="slide10" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place11.jpeg" alt="slide11" class="centerSplash" />
+        <img src="./assets/img/place11.jpeg" alt="slide11" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./images/place12.jpeg" alt="slide12" class="centerSplash" />
+        <img src="./assets/img/place12.jpeg" alt="slide12" class="centerSplash" />
       </div>
     </div>
 
@@ -105,8 +105,8 @@
     </article>
 
     
-  <footer>
-    <img src="./images/auranobackwhite.png" alt="auraLogo" />
-    <p>© 2019 Aura, Inc.</p>
-  </footer>
+    <footer>
+      <img src="./assets/img/auranobackwhite.png" alt="auraLogo" />
+      <p>© 2019 Aura, Inc.</p>
+    </footer>
 </html>
