--- a/src/meetTheTeam.html
+++ b/src/meetTheTeam.html
@@ -34,7 +34,7 @@
 
     <section id="grid">
       <section id="devon" class="halfpics">
-        <img src="./images/Devon_Marantz.jpg" alt="Devon Marantz" />
+        <img src="./assets/img/Devon_Marantz.jpg" alt="Devon Marantz" />
         <ul id="title">
           <h3>Devon Marantz</h3>
           <li class="role">Role: Product Owner</li>
@@ -46,7 +46,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./images/emily_yang.png" alt="Emily Yang" />
+        <img src="./assets/img/emily_yang.png" alt="Emily Yang" />
         <ul id="title">
           <h3>Emily Yang</h3>
           <li class="role">Role: Scrum Master</li>
@@ -58,7 +58,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./images/Scott_Roberts.jpg" alt="Scott Roberts" />
+        <img src="./assets/img/Scott_Roberts.jpg" alt="Scott Roberts" />
         <ul id="title">
           <h3>Scott Roberts</h3>
           <li class="role">Role: Software Engineer</li>
@@ -70,7 +70,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./images/Kevin_Amarbayar.jpg" alt="Kevin Amarbayar" />
+        <img src="./assets/img/Kevin_Amarbayar.jpg" alt="Kevin Amarbayar" />
         <ul id="title">
           <h3>Kevin Amarbayar</h3>
           <li class="role">Role: Software Engineer</li>
@@ -82,7 +82,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./images/Ervin_Mitra.jpg" alt="Ervin Mitra" />
+        <img src="./assets/img/Ervin_Mitra.jpg" alt="Ervin Mitra" />
         <ul id="title">
           <h3>Ervin Mitra</h3>
           <li class="role">Role: Software Engineer</li>
@@ -94,7 +94,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./images/Jon_Azali.jpg" alt="Jonathan Azali" />
+        <img src="./assets/img/Jon_Azali.jpg" alt="Jonathan Azali" />
         <ul id="title">
           <h3>Jonathan Azali</h3>
           <li class="role">Role: Software Engineer</li>
@@ -106,7 +106,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./images/Brock_Jameson.jpg" alt="Brock Jameson" />
+        <img src="./assets/img/Brock_Jameson.jpg" alt="Brock Jameson" />
         <ul id="title">
           <h3>Brock Jameson</h3>
           <li class="role">Role: Software Engineer</li>
@@ -120,7 +120,7 @@
   </body>
 
   <footer>
-    <img src="./images/auranobackwhite.png" alt="auraLogo" />
+    <img src="./assets/img/auranobackwhite.png" alt="auraLogo" />
     <p>© 2019 Aura, Inc.</p>
   </footer>
 </html>
