--- a/src/about.html
+++ b/src/about.html
@@ -31,6 +31,46 @@
         </ul>
       </nav>
     </header>
+
+    <div class="slideshow">
+      <div class="slides">
+        <img src="./assets/img/place1.jpg" alt="slide1" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place2.jpg" alt="slide2" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place3.jpg" alt="slide3" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place4.jpg" alt="slide4" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place5.jpeg" alt="slide5" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place6.jpeg" alt="slide6" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place7.jpeg" alt="slide7" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place8.jpeg" alt="slide8" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place9.jpg" alt="slide9" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place10.jpeg" alt="slide10" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place11.jpeg" alt="slide11" class="centerSplash" />
+      </div>
+      <div class="slides">
+        <img src="./assets/img/place12.jpeg" alt="slide12" class="centerSplash" />
+      </div>
+    </div>
+
     <h1 class="splashHeader">What is your aura?</h1>
 
     <!-- Fancy divider -->
@@ -176,6 +216,11 @@
       ></path>
     </svg>
   </div>
+
+  <footer>
+    <img src="./assets/img/auranobackwhite.png" alt="auraLogo" />
+    <p>© 2019 Aura, Inc.</p>
+  </footer>
 </body>
 </html>
 
