Fix responsive header

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,18 @@
 
   <body>
     <header>
-      <nav id="navoptions">
-        <a class="btn active" href="#Home"
-          ><img src="./assets/img/auraLogo.png" alt="auraLogo" id="headerLogo"
-        /></a>
+      <a href="index.html"
+        ><img
+          src="./assets/img/auraLogo.png"
+          alt="auraLogo"
+          class="headerLogo"
+          href="#home"
+      /></a>
+
+      <nav>
         <ul>
-          <li>
-            <a class="btn" href="./index.html">Home</a>
+          <li class="liActive">
+            <a class="btnActive" href="./index.html">Home</a>
           </li>
           <li>
             <a class="btn" href="./about.html">What is Aura</a>
