--- a/src/meetTheTeam.html
+++ b/src/meetTheTeam.html
@@ -14,10 +14,15 @@
   </head>
   <body background="./assets/img/trinityBackgroundWhite.png">
     <header>
-      <nav id="navoptions">
-        <a class="btn active" href="#Home"
-          ><img src="./assets/img/auraLogo.png" alt="auraLogo" id="headerLogo"
-        /></a>
+      <a href="index.html"
+        ><img
+          src="./assets/img/auraLogo.png"
+          alt="auraLogo"
+          class="headerLogo"
+          href="#home"
+      /></a>
+
+      <nav>
         <ul>
           <li>
             <a class="btn" href="./index.html">Home</a>
@@ -25,8 +30,8 @@
           <li>
             <a class="btn" href="./about.html">What is Aura</a>
           </li>
-          <li>
-            <a class="btn" href="./meetTheTeam.html">Contact</a>
+          <li class="liActive">
+            <a class="btnActive" href="./meetTheTeam.html">Contact</a>
           </li>
         </ul>
       </nav>
