--- a/src/about.html
+++ b/src/about.html
@@ -14,16 +14,21 @@
 </head>
 <body>
     <header>
-      <nav id="navoptions">
-        <a class="btn active" href="#Home"
-          ><img src="./assets/img/auraLogo.png" alt="auraLogo" id="headerLogo"
-        /></a>
+      <a href="index.html"
+        ><img
+          src="./assets/img/auraLogo.png"
+          alt="auraLogo"
+          class="headerLogo"
+          href="#home"
+      /></a>
+
+      <nav>
         <ul>
           <li>
             <a class="btn" href="./index.html">Home</a>
           </li>
-          <li>
-            <a class="btn" href="./about.html">What is Aura</a>
+          <li class="liActive">
+            <a class="btnActive" href="./about.html">What is Aura</a>
           </li>
           <li>
             <a class="btn" href="./meetTheTeam.html">Contact</a>
