Fix z index of slideshow

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <a class="btnActive" href="./index.html">Home</a>
           </li>
           <li>
-            <a class="btn" href="./about.html">What is Aura</a>
+            <a class="btn" href="./about.html">About Aura</a>
           </li>
           <li>
             <a class="btn" href="./meetTheTeam.html">Contact</a>
