--- a/src/about.html
+++ b/src/about.html
@@ -28,7 +28,7 @@
             <a class="btn" href="./index.html">Home</a>
           </li>
           <li class="liActive">
-            <a class="btnActive" href="./about.html">What is Aura</a>
+            <a class="btnActive" href="./about.html">About Aura</a>
           </li>
           <li>
             <a class="btn" href="./meetTheTeam.html">Contact</a>
