--- a/src/meetTheTeam.html
+++ b/src/meetTheTeam.html
@@ -28,7 +28,7 @@
             <a class="btn" href="./index.html">Home</a>
           </li>
           <li>
-            <a class="btn" href="./about.html">What is Aura</a>
+            <a class="btn" href="./about.html">About Aura</a>
           </li>
           <li class="liActive">
             <a class="btnActive" href="./meetTheTeam.html">Contact</a>
