--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,8 @@
 
     <article>
       <form id="auraForm" class="forms">
-        <h2>What Aura are you looking for?</h2>
+        <h2 class="formHeader">What Aura are you looking for?</h2>
+        <br/>
         <select>
           <option value="cheerful">Cheerful</option>
           <option value="inspired">Inspired</option>
@@ -94,9 +95,10 @@
           <option value="touristy">Touristy</option>
         </select>
       </form>
-
+      
       <form id="activityForm" class="forms">
-        <h2>What activity are you interested in?</h2>
+        <h2 class="formHeader">What activity are you interested in?</h2>
+        <br/>
         <select>
           <option value="studying">Studying</option>
           <option value="dating">Dating</option>
