Add some new fun photos and fix header

--- a/src/meetTheTeam.html
+++ b/src/meetTheTeam.html
@@ -51,7 +51,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./assets/img/emily_yang.png" alt="Emily Yang" />
+        <img src="./assets/img/emily-yang.png" alt="Emily Yang" />
         <ul id="title">
           <h3>Emily Yang</h3>
           <li class="role">Role: Scrum Master</li>
@@ -63,7 +63,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./assets/img/Scott_Roberts.jpg" alt="Scott Roberts" />
+        <img src="./assets/img/Scott_Roberts.png" alt="Scott Roberts" />
         <ul id="title">
           <h3>Scott Roberts</h3>
           <li class="role">Role: Software Engineer</li>
