--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,13 @@
     <link rel="shortcut icon" type="image/png" href="./images/auracircle.png" />
     <script defer type="module" src="main.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link
-    href="https://fonts.googleapis.com/css?family=Comfortaa"
-    rel="stylesheet"
-  />
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" />
   </head>
 
   <body>
     <header>
       <a href="index.html"
-        ><img
-          src="./assets/img/auraLogo.png"
-          alt="auraLogo"
-          class="headerLogo"
-          href="#home"
+        ><img src="./assets/img/auraLogo.png" alt="auraLogo" class="headerLogo" href="#home"
       /></a>
 
       <nav>
@@ -81,7 +74,7 @@
     <article>
       <form id="auraForm" class="forms">
         <h2 class="formHeader">What Aura are you looking for?</h2>
-        <br/>
+        <br />
         <select>
           <option value="cheerful">Cheerful</option>
           <option value="inspired">Inspired</option>
@@ -95,10 +88,10 @@
           <option value="touristy">Touristy</option>
         </select>
       </form>
-      
+
       <form id="activityForm" class="forms">
         <h2 class="formHeader">What activity are you interested in?</h2>
-        <br/>
+        <br />
         <select>
           <option value="studying">Studying</option>
           <option value="dating">Dating</option>
@@ -111,9 +104,56 @@
       <input type="submit" id="submitButton" />
     </article>
 
-    
+    <section id="searchResults">
+      <div class="resultCard">
+        <div class="resultCardImageContainer">
+          <img
+            class="resultCardImage"
+            src="https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg"
+          />
+        </div>
+        <p class="resultCardTitle">
+          Address
+        </p>
+        <p class="resultCardSubtitle">
+          Aura
+        </p>
+      </div>
+
+      <div class="resultCard">
+        <div class="resultCardImageContainer">
+          <img
+            class="resultCardImage"
+            src="https://images.unsplash.com/photo-1551419762-4a3d998f6292?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+          />
+        </div>
+        <p class="resultCardTitle">
+          Address
+        </p>
+        <p class="resultCardSubtitle">
+          Aura
+        </p>
+      </div>
+
+      <div class="resultCard">
+        <div class="resultCardImageContainer">
+          <img
+            class="resultCardImage"
+            src="https://images.unsplash.com/photo-1550757750-4ce187a65014?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+          />
+        </div>
+        <p class="resultCardTitle">
+          Address
+        </p>
+        <p class="resultCardSubtitle">
+          Aura
+        </p>
+      </div>
+    </section>
+
     <footer>
       <img src="./assets/img/auranobackwhite.png" alt="auraLogo" />
       <p>© 2019 Aura, Inc.</p>
     </footer>
+  </body>
 </html>
