--- a/src/index.html
+++ b/src/index.html
@@ -105,49 +105,52 @@
     </article>
 
     <section id="searchResults">
-      <div class="resultCard">
-        <div class="resultCardImageContainer">
-          <img
-            class="resultCardImage"
-            src="https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg"
-          />
+      <h2>Search Results</h2>
+      <div id="resultCards">
+        <div class="resultCard">
+          <div class="resultCardImageContainer">
+            <img
+              class="resultCardImage"
+              src="https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg"
+            />
+          </div>
+          <p class="resultCardTitle">
+            Address
+          </p>
+          <p class="resultCardSubtitle">
+            Aura
+          </p>
         </div>
-        <p class="resultCardTitle">
-          Address
-        </p>
-        <p class="resultCardSubtitle">
-          Aura
-        </p>
-      </div>
 
-      <div class="resultCard">
-        <div class="resultCardImageContainer">
-          <img
-            class="resultCardImage"
-            src="https://images.unsplash.com/photo-1551419762-4a3d998f6292?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
-          />
+        <div class="resultCard">
+          <div class="resultCardImageContainer">
+            <img
+              class="resultCardImage"
+              src="https://images.unsplash.com/photo-1551419762-4a3d998f6292?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+            />
+          </div>
+          <p class="resultCardTitle">
+            Address
+          </p>
+          <p class="resultCardSubtitle">
+            Aura
+          </p>
         </div>
-        <p class="resultCardTitle">
-          Address
-        </p>
-        <p class="resultCardSubtitle">
-          Aura
-        </p>
-      </div>
 
-      <div class="resultCard">
-        <div class="resultCardImageContainer">
-          <img
-            class="resultCardImage"
-            src="https://images.unsplash.com/photo-1550757750-4ce187a65014?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-          />
+        <div class="resultCard">
+          <div class="resultCardImageContainer">
+            <img
+              class="resultCardImage"
+              src="https://images.unsplash.com/photo-1550757750-4ce187a65014?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+            />
+          </div>
+          <p class="resultCardTitle">
+            Address
+          </p>
+          <p class="resultCardSubtitle">
+            Aura
+          </p>
         </div>
-        <p class="resultCardTitle">
-          Address
-        </p>
-        <p class="resultCardSubtitle">
-          Aura
-        </p>
       </div>
     </section>
 
