Fix for card results

--- a/src/index.html
+++ b/src/index.html
@@ -104,9 +104,11 @@
       <input type="submit" id="submitButton" />
     </article>
 
+    <h2>Search Results</h2>
+
     <section id="searchResults">
-      <h2>Search Results</h2>
-      <div id="resultCards">
+      <div class="resultCards">
+        <!-- <h3 class="resultCardsTitle">Lively</h3> -->
         <div class="resultCard">
           <div class="resultCardImageContainer">
             <img
@@ -114,6 +116,22 @@
               src="https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg"
             />
           </div>
+          <p class="resultCardTitle">
+            Address
+          </p>
+          <p class="resultCardSubtitle">
+            Aura
+          </p>
+        </div>
+
+        <div class="resultCard">
+          <div class="resultCardImageContainer">
+            <img
+              class="resultCardImage"
+              src="https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg"
+            />
+          </div>
+
           <p class="resultCardTitle">
             Address
           </p>
