--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,20 @@
     <link rel="shortcut icon" type="image/png" href="./images/auracircle.png" />
     <script defer type="module" src="main.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Comfortaa"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
       <a href="index.html"
-        ><img src="./assets/img/auraLogo.png" alt="auraLogo" class="headerLogo" href="#home"
+        ><img
+          src="./assets/img/auraLogo.png"
+          alt="auraLogo"
+          class="headerLogo"
+          href="#home"
       /></a>
 
       <nav>
@@ -61,13 +68,25 @@
         <img src="./assets/img/place9.jpg" alt="slide9" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./assets/img/place10.jpeg" alt="slide10" class="centerSplash" />
+        <img
+          src="./assets/img/place10.jpeg"
+          alt="slide10"
+          class="centerSplash"
+        />
       </div>
       <div class="slides">
-        <img src="./assets/img/place11.jpeg" alt="slide11" class="centerSplash" />
+        <img
+          src="./assets/img/place11.jpeg"
+          alt="slide11"
+          class="centerSplash"
+        />
       </div>
       <div class="slides">
-        <img src="./assets/img/place12.jpeg" alt="slide12" class="centerSplash" />
+        <img
+          src="./assets/img/place12.jpeg"
+          alt="slide12"
+          class="centerSplash"
+        />
       </div>
     </div>
 
@@ -109,66 +128,6 @@
     <section id="searchResults">
       <div class="resultCards">
         <!-- <h3 class="resultCardsTitle">Lively</h3> -->
-        <div class="resultCard">
-          <div class="resultCardImageContainer">
-            <img
-              class="resultCardImage"
-              src="https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg"
-            />
-          </div>
-          <p class="resultCardTitle">
-            Address
-          </p>
-          <p class="resultCardSubtitle">
-            Aura
-          </p>
-        </div>
-
-        <div class="resultCard">
-          <div class="resultCardImageContainer">
-            <img
-              class="resultCardImage"
-              src="https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg"
-            />
-          </div>
-
-          <p class="resultCardTitle">
-            Address
-          </p>
-          <p class="resultCardSubtitle">
-            Aura
-          </p>
-        </div>
-
-        <div class="resultCard">
-          <div class="resultCardImageContainer">
-            <img
-              class="resultCardImage"
-              src="https://images.unsplash.com/photo-1551419762-4a3d998f6292?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
-            />
-          </div>
-          <p class="resultCardTitle">
-            Address
-          </p>
-          <p class="resultCardSubtitle">
-            Aura
-          </p>
-        </div>
-
-        <div class="resultCard">
-          <div class="resultCardImageContainer">
-            <img
-              class="resultCardImage"
-              src="https://images.unsplash.com/photo-1550757750-4ce187a65014?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-            />
-          </div>
-          <p class="resultCardTitle">
-            Address
-          </p>
-          <p class="resultCardSubtitle">
-            Aura
-          </p>
-        </div>
       </div>
     </section>
 
