Add overlay on marketing splash

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 
     <div class="slideshow">
       <div class="slides">
-        <img src="./assets/img/place1.jpg" alt="slide1" class="centerSplash" />
+        <img src="./assets/img/place1.png" alt="slide1" class="centerSplash" />
       </div>
       <div class="slides">
         <img src="./assets/img/place2.jpg" alt="slide2" class="centerSplash" />
@@ -56,7 +56,7 @@
         <img src="./assets/img/place5.jpeg" alt="slide5" class="centerSplash" />
       </div>
       <div class="slides">
-        <img src="./assets/img/place6.jpeg" alt="slide6" class="centerSplash" />
+        <img src="./assets/img/place6.jpg" alt="slide6" class="centerSplash" />
       </div>
       <div class="slides">
         <img src="./assets/img/place7.jpeg" alt="slide7" class="centerSplash" />
