--- a/src/meetTheTeam.html
+++ b/src/meetTheTeam.html
@@ -111,7 +111,7 @@
       </section>
 
       <section class="halfpics">
-        <img src="./assets/img/Brock_Jameson.jpg" alt="Brock Jameson" />
+        <img src="./assets/img/Brock_Jameson.png" alt="Brock Jameson" />
         <ul id="title">
           <h3>Brock Jameson</h3>
           <li class="role">Role: Software Engineer</li>
