--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>Aura</title>
     <link rel="shortcut icon" type="image/png" href="./assets/img/auracircle.png" />
     <script defer type="module" src="main.js"></script>
+    <!-- We are using the result card in this document because the others don't need to have results. -->
+    <script defer src="components/result-card/ResultCard.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" />
   </head>
