--- a/src/about.html
+++ b/src/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script defer type="module" src="main.js"></script>
+    <script defer src="main.js"></script>
     <link
     href="https://fonts.googleapis.com/css?family=Comfortaa"
     rel="stylesheet"
